# simon-game

./: .gitignore  Cargo.toml
public/: index.css  index.html
simon_game/: Cargo.toml
simon_game/src/: lib.rs
src/: lib.rs
view/: index.css  index.html  main.js  package.json  vite.config.js
