[package]
name = "simon_game"
authors = ["Gavin Noktes <gnoktes@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
async-std = "1.11.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.5"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = ["Document", "HtmlElement", "Window", "Node"] }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
